--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "src/index.js",
   "dependencies": {
     "split": "^1.0.1",
-    "which": "^1.3.0"
+    "which": "^2.0.2"
   },
   "devDependencies": {
-    "proxy-agent": "3.1.0",
-    "puppeteer": "1.19.0"
+    "proxy-agent": "^4.0.1",
+    "puppeteer": "^10.0.0"
   },
   "scripts": {
     "test": "node src/test.js"
